<resources>
	<string name="add_new_screen">Add New Screen</string>
	<string name="add_new_bar">Add New Bar</string>
	<string name="add_to_playlist">Add to Playlist</string>
	<string name="address">Address</string>
	<string name="air_ride">Air Ride</string>
	<string name="alarm">Alarm</string>
	<string name="alarm_length">Alarm length</string>
	<string name="alarm_length_summary">Length of alarm in seconds</string>
	<string name="alarm_settings">Alarm settings</string>
	<string name="alarm_settings_summary">Setup times, delays, etc...</string>
	<string name="album_art_bg">Album Artwork</string>
	<string name="album_art_bg_summary">Use currently playing music album art for background</string>
	<string name="album_art_music_button_summary">Use currently playing music album art for the music button</string>
	<string name="albums">Albums</string>
	<string name="all_apps">Apps</string>
	<string name="artist_art_bg">Artist Artwork</string>
	<string name="artist_art_bg_summary">Use currently playing artist image for background</string>
	<string name="answer">Answer</string>
	<string name="app_name">lydia</string>
	<string name="arduino">Arduino</string>
	<string name="artist">Artist</string>
	<string name="artists">Artists</string>
	<string name="artwork">Artwork</string>
	<string name="auto_arm">Auto arm alarm</string>
	<string name="auto_arm_summary">Enables/disables auto arming</string>
	<string name="auto_arm_delay">Auto arm delay</string>
	<string name="auto_arm_delay_summary">Delay before automatically arming in seconds</string>
	<string name="auto_brightness">Automatic Brightness</string>
	<string name="auto_brightness_summary">Automatically adjust the backlight based on ambient light</string>
	<string name="auto_upgrade_firmware">Automatically upgrade Arduino firmware</string>
	<string name="auto_find_slaves">Automatically find slave devices</string>
	<string name="back">Back</string>
	<string name="background">Background</string>
	<string name="background_set">Set Background</string>
	<string name="background_summary">Change the screen background</string>
	<string name="backlight">Backlight</string>
	<string name="backlight_summary">Set the backlight brightness of the gauges</string>
	<string name="battery">Battery</string>
	<string name="bluetooth">Bluetooth</string>
	<string name="button_scan">Search for devices</string>
	<string name="brightness">Brightness</string>
	<string name="cancel">Cancel</string>
	<string name="calendar">Calendar</string>
	<string name="calibrate_speedo">Calibrate Speedometer Input</string>
	<string name="calibrate_speedo_finish">Finish Calibration</string>
	<string name="calibrate_speedo_instructions">In order to calibrate the speedometer you need to have a pre-marked 2 kilometer (or mile) distance.  If you use miles the gauge will read in miles, if you use kiometers, it will read kilometers.
	When you are ready, press the \"Start Calibration\" button and drive the distance.  You should see the counter increase.  When you get to the end of your marked area, press \"Finish Calibration\".
	Remember, the accuracy of the pre-marked distance will directly affect the accuracy of the speedometer.</string>
	<string name="calibrate_speedo_start">Start Calibration</string>
	<string name="calibrate_speedo_summary">Calibrates the input pulses for the speedometer</string>
	<string name="call">Call</string>
	<string name="clear">Clear</string>
	<string name="check_for_update">Check for update</string>
	<string name="choose_colors">Choose colors</string>
	<string name="choose_image">Choose image</string>
	<string name="chrome">Chrome</string>
	<string name="clear_playlist_confirm">Really clear playlist</string>
	<string name="close">Close</string>
	<string name="contacts">Contacts</string>
	<string name="current_value">Current Sensor Value</string>
	<string name="delay">Delay</string>
	<string name="delete">Delete</string>
	<string name="delete_playlist_confirm">Really delete playlist</string>
	<string name="device_paired">Device paired</string>
	<string name="dial">Dial</string>
	<string name="dialer">Dialer</string>
	<string name="distance">Distance</string>
	<string name="duration">Duration</string>
	<string name="edit">Edit</string>
	<string name="engine">Engine</string>
	<string name="external_light_sensor">External Light Sensor</string>
	<string name="external_temperature_sensor">External Temperature Sensor</string>
	<string name="fast_forward">Fast Forward</string>
	<string name="filter">Filter</string>
	<string name="friday">Friday</string>
    <string name="friday_abbr">Fri</string>
	<string name="gauge_backlight">Brightness of Gauge Backlight</string>
	<string name="gauge_cluster">Gauge Cluster</string>
	<string name="google">Google</string>
	<string name="home">Home</string>
	<string name="home_screen">Home Screen</string>
	<string name="ignore">Ignore</string>
	<string name="incoming_call">Incoming Call</string>
	<string name="inside_temp">Inside</string>
	<string name="lastfm">last.fm</string>
	<string name="lastfm_login_failed">last.fm Login Failed</string>
	<string name="lastfm_login_successful">last.fm Login Successful</string>
	<string name="lastfm_use">Use last.fm to scrobble songs</string>
	<string name="lastfm_username">last.fm Username</string>
	<string name="lastfm_password">last.fm Password</string>
	<string name="launcher_error">Failed to laucn application</string>
	<string name="light_sensor">Light Sensor</string>
	<string name="loading">Loading...</string>
	<string name="loading_address">Loading address...</string>
	<string name="map_use_metric">Use Metric</string>
	<string name="maps">Maps</string>
	<string name="max_light">Light level before switching high</string>
	<string name="media_button_padding">6dp</string>
	<string name="media">Media</string>
	<string name="media_service">Media Service</string>
	<string name="min_light">Light level before switching low</string>
	<string name="monday">Monday</string>
	<string name="monday_abbr">Mon</string>
	<string name="more">More</string>
	<string name="movies">Movies</string>
	<string name="music">Music</string>
	<string name="music_button">Music Button</string>
	<string name="name">Name</string>
	<string name="navigation">Navigation</string>
	<string name="navigation_mode">Navigation Mode</string>
	<string name="never">Never</string>
	<string name="new_playlist">New Playlist</string>
	<string name="next">Next</string>
	<string name="none_found">No devices found</string>
	<string name="none_paired">No devices have been paired</string>
	<string name="ok">OK</string>
	<string name="outside_temp">Outside</string>
	<string name="paired">Paired</string>
	<string name="paired_devices">Paired Devices</string>
	<string name="paired_devices_summary">Pair/unpair Bluetooth devices</string>
	<string name="pairing_device">Pairing device</string>
	<string name="pause">Pause</string>
	<string name="paused">Paused</string>
	<string name="phone">Phone</string>
	<string name="play">Play</string>
	<string name="playlist">Playlist</string>
	<string name="playlists">Playlists</string>
	<string name="playlist_name">Playlist Name</string>
	<string name="play_all">Play All</string>
	<string name="playing">Playing</string>
	<string name="previous">Previous</string>
	<string name="radio">Radio</string>
	<string name="random">Random</string>
	<string name="recent_calls">Recent Calls</string>
	<string name="rear_defroster">Rear Defroster</string>
	<string name="remove">Remove</string>
	<string name="remove_from_playlist">Remove from playlist</string>
	<string name="repeat">Repeat</string>
	<string name="reply">Reply</string>
	<string name="reset_background_default">Reset background to default</string>
	<string name="rewind">Rewind</string>
	<string name="rfid_nothing_found">No tags found.  Scan one now to add it.</string>
	<string name="rfid_tags">RFID tags</string>
	<string name="rfid_tags_summary">RFID tags used to access the car</string>
	<string name="saturday">Saturday</string>
	<string name="saturday_abbr">Sat</string>
	<string name="save">Save</string>
	<string name="scanning">scanning for devices...</string>
	<string name="search">Search</string>
	<string name="seat_heat">SeatHeat</string>
	<string name="seconds">seconds</string>
	<string name="select_device">select a device to connect</string>
	<string name="settings">Settings</string>
	<string name="setup_alarm">Setup alarm</string>
	<string name="setup_home_screen">Setup Home Screen</string>
	<string name="setup_home_screen_summary">Organize home screen icons to your liking</string>
	<string name="setup_sidebars">Setup Sidebars</string>
	<string name="setup_sidebars_summary">Organize sidebar buttons</string>
	<string name="setup_gauge_cluster">Setup Gauge Cluster</string>
	<string name="shuffle">Shuffle</string>
	<string name="shuffle_all">Shuffling all songs</string>
	<string name="sms">SMS</string>
	<string name="sms_received">SMS Received</string>
	<string name="song_title">Title</string>
	<string name="songs">Songs</string>
	<string name="speaker">Speaker</string>
	<string name="speaker_summary">Beep speaker on initial powerup</string>
	<string name="speaker_title">Speaker</string>
	<string name="speaker_volume">Speaker Volume</string>
	<string name="speaker_volume_summary">Adjust the volume of the speaker</string>
	<string name="speedometer">Speedometer</string>
	<string name="speedo_input_pulses">Speedometer Input pulses per Km</string>
	<string name="speedo_input_pulses_dialog_message">Once calibrated this shouldn\'t need to change.  Unless different size tires are installed.</string>
	<string name="speedo_input_pulses_summary">Number of pulses the wheel generates per Km</string>
	<string name="speedo_output_pulses">Speedometer Output Pulses per Km</string>
	<string name="speedo_output_pulses_dialog_message">This needs to match what the speedometer expects as an input.</string>
	<string name="speedo_output_pulses_summary">Needs to match what the gauge expects.</string>
	<string name="status">Status</string>
	<string name="stop">Stop</string>
	<string name="sunday">Sunday</string>
	<string name="sunday_abbr">Sun</string>
	<string name="system_bluetooth">System Bluetooth</string>
	<string name="system_bluetooth_summary">Enable/disable Bluetooth system wide</string>
	<string name="system_wifi">System Wi-Fi</string>
	<string name="system_wifi_summary">Enable/disable Wi-Fi system wide</string>
	<string name="tag_number">Tag number: </string>
	<string name="thursday">Thursday</string>
	<string name="thursday_abbr">Thu</string>
	<string name="title_paired_devices">Paired Devices</string>
	<string name="title_unpaired_devices">Unpaired Devices</string>
	<string name="time">Time</string>
	<string name="today">Today</string>
	<string name="toggle_traffic">Toggle Traffic</string>
	<string name="tuesday">Tuesday</string>
	<string name="tuesday_abbr">Tue</string>
	<string name="type_phone">Phone Numbers</string>
	<string name="type_email">E-Mail</string>
	<string name="unpairing_device">Unpairing device</string>
	<string name="update">Update</string>
	<string name="use_alarm">Use alarm</string>
	<string name="use_arduino">Use Arduino to communicate with other hardware</string>
	<string name="use_bluetooth">Use Bluetooth</string>
	<string name="use_bluetooth_summary">Use Bluetooth in app</string>
	<string name="use_homescreen_buttons">Homescreen buttons</string>
	<string name="use_homescreen_buttons_summary">Optionally hide homescreen buttons and just use sidebars</string>
	<string name="use_phone">Use this phone in app</string>
	<string name="quick_call">Who would you like to call?</string>
	<string name="videos">Videos</string>
	<string name="volume_control">Volume Control</string>
	<string name="weather">Weather</string>
	<string name="weather_use_celsius">Use Celsius</string>
	<string name="window_down">Window Down</string>
	<string name="window_up">Window Up</string>
	<string name="wipe">Wipe</string>
	<string name="wipers">Wipers</string>
</resources>