<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
		xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory
			android:title="@string/bluetooth">
		<SwitchPreference
				android:key="systemBluetooth"
				android:defaultValue="false"
				android:title="@string/system_bluetooth"
				android:summary="@string/system_bluetooth_summary"/>
		<SwitchPreference
				android:key="useBluetooth"
				android:defaultValue="false"
				android:title="@string/use_bluetooth"
				android:summary="@string/use_bluetooth_summary"
				android:dependency="systemBluetooth"/>
		<Preference
				android:key="bluetooth_phone_address"
				android:title="@string/paired_devices"
				android:summary="@string/paired_devices_summary"
				android:dependency="systemBluetooth">
				<intent android:action=".activities.DeviceListActivity"/>
		</Preference>
		<EditTextPreference
				android:key="phone_address"
				android:title="@string/address"
				android:summary="Address of phone currently paired"
				android:dependency="systemBluetooth"/>
	</PreferenceCategory>
</PreferenceScreen>