<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="10dip">

	<TextView android:id="@+id/playlist_title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/playlist_name"
		style="@style/LargeText"/>

	<EditText android:id="@+id/playlist_name"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:layout_below="@id/playlist_title"
		android:hint="@string/name" />

	<Button android:id="@+id/playlist_save"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/playlist_name"
		android:text="@string/save"/>

</RelativeLayout>