<?xml version="1.0" encoding="utf-8"?>

<com.desarrollodroide.libraryfragmenttransactionextended.SlidingRelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="horizontal">

		<LinearLayout android:layout_width="0dip" android:layout_weight="1" android:layout_height="match_parent" android:gravity="center_horizontal|bottom" android:orientation="vertical">
			<ImageButton android:id="@+id/bluetooth"
						 android:layout_width="wrap_content"
						 android:layout_height="wrap_content"
						 android:src="@drawable/device_access_bluetooth"
						 android:contentDescription="@string/bluetooth"
						 android:background="@null"
						 android:onClick="toggleBluetooth"/>
			<TextView style="@style/XSmallText" android:text="@string/bluetooth"/>
		</LinearLayout>

	<LinearLayout android:layout_width="0dip" android:layout_weight="1" android:layout_height="match_parent" android:gravity="center_horizontal|bottom" android:orientation="vertical">
			<ImageView android:id="@+id/day_night"
					   android:layout_width="wrap_content"
					   android:layout_height="wrap_content"
					   android:src="@drawable/device_access_brightness_high"
					   android:contentDescription="@string/brightness" />
			<TextView style="@style/XSmallText" android:text="@string/brightness"/>
		</LinearLayout>

		<LinearLayout android:layout_width="0dip" android:layout_weight="1" android:layout_height="match_parent" android:gravity="center_horizontal|bottom" android:orientation="vertical">
			<TextView android:id="@+id/battery_pct"
					  style="@style/SmallText"
					  android:text="-1%" />
			<TextView style="@style/XSmallText" android:text="@string/battery"/>
		</LinearLayout>

		<LinearLayout android:layout_width="0dip" android:layout_weight="1" android:layout_height="match_parent" android:gravity="center_horizontal|bottom" android:orientation="vertical">
			<TextView android:id="@+id/inside_temperature"
					  style="@style/SmallText"
					  android:text="0" />
			<TextView style="@style/XSmallText" android:text="@string/inside_temp"/>
		</LinearLayout>

		<LinearLayout android:layout_width="0dip" android:layout_weight="1" android:layout_height="match_parent" android:gravity="center_horizontal|bottom" android:orientation="vertical">
			<TextView android:id="@+id/outside_temperature"
					  style="@style/SmallText"
					  android:text="0" />
			<TextView style="@style/XSmallText" android:text="@string/outside_temp"/>
		</LinearLayout>


	</LinearLayout>


</com.desarrollodroide.libraryfragmenttransactionextended.SlidingRelativeLayout>